--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
                 </ul>
 
                 <div class="menu-mobile-actions">
-                  <a href="#" class="btn-login G-align-center">
+                  <a href="https://nexa.ru/sign-up" target="_blank" class="btn-login G-align-center">
                     <span class="login-btn-bg G-center">
                       <i class="icon icon-person"></i>
                     </span>
                     <span class="login-btn-text">Войти</span>
                   </a>
 
-                  <a href="#" class="btn-register G-align-center">
+                  <a href="https://nexa.ru/sign-up" target="_blank" class="btn-register G-align-center">
                     <span class="register-btn-bg G-center">
                       <i class="icon icon-person-edit"></i>
                     </span>
@@ -91,14 +91,14 @@
             <div class="menu-bg"></div>
 
             <div class="header-actions G-align-center">
-              <a href="#" class="btn-login G-align-center">
+              <a href="https://nexa.ru/sign-up" target="_blank" class="btn-login G-align-center">
                 <span class="login-btn-bg G-center">
                   <i class="icon icon-person"></i>
                 </span>
                 <span class="login-btn-text">Войти</span>
               </a>
 
-              <a href="#" class="btn-register G-align-center">
+              <a href="https://nexa.ru/sign-up" target="_blank" class="btn-register G-align-center">
                 <span class="register-btn-bg G-center">
                   <i class="icon icon-person-edit"></i>
                 </span>
@@ -121,7 +121,7 @@
             <div class="hero-body">
               <div class="hero-titles">
                 <h1 class="fade-top">
-                 <span style="color: #DCE8FF;"> Оживите ваши фото</span> с помощью <br> нейросети Nexa AI
+                 <span class="title-color"> Оживите ваши фото</span> с помощью <br> нейросети Nexa AI
                 </h1>
                 <p class="fade-bottom desktop-block">
                   Загружаете изображение — <span style="font-weight: 600;">получаете видео <br> с плавной анимацией</span>
@@ -129,7 +129,7 @@
                 <p class="fade-bottom mobile-block">
                   Загружаете изображение — <span style="font-weight: 600;">получаете <br> видео с плавной анимацией</span>
                 </p>
-                <a class="black-btn hero-btn">
+                <a href="https://nexa.ru/sign-up" target="_blank"  class="black-btn hero-btn">
                   <span class="black-btn-bg G-center">
                     <i class="icon icon-stars"></i>
                   </span>
@@ -196,7 +196,7 @@
             <div class="advantages__top">
               <div class="section-titles fade-top G-column-center">
                   <h2>
-                    Nexa AI — ваш лучший <br> выбор <span style="color: #DCE8FF;">для оживления фото</span>
+                    Nexa AI — ваш лучший <br> выбор <span class="title-color">для оживления фото</span>
                   </h2>
                   <p>Сочетание <span style="font-weight: 600;">мощных технологий</span> <br> с простотой использования</p>
               </div>
@@ -298,15 +298,15 @@
                 </h2>
                 <p>От базового оживления до профессиональных эффектов — <span style="font-weight: 600;">всё для вашего творчества</span></p>
             </div>
-            <div class="possibility__columns">
-              <div class="possibility__column">
+            <div target="_blank" class="possibility__columns">
+              <a href="https://nexa.ru/sign-up" target="_blank" class="possibility__column">
                 <div class="possibility__content">
                   <h3 class="possibility__subtitle"><img src="assets/images/icon/mask.png" alt="img" width="" heigth="" loading="lazy"> Естественная анимация лиц</h3>
-                  <p class="possibility__text">Мягкие движения: лёгкая улыбка, моргание, поворот головы. Выглядит <span style="font-weight: 600;">абсолютно натурально</span></p>
+                  <p class="possibility__text">Мягкие движения: лёгкая улыбка, моргание, поворот головы. Выглядит <span class="title-color">абсолютно натурально</span></p>
                 </div>
-                <a href="#" class="possibility__button">
+                <div class="possibility__button">
                   <img src="assets/images/icon/arrow.png" alt="img" width="" heigth="" loading="lazy">
-                </a>
+                </div>
                 <div class="possibility__image">
                  <picture>
                      <source
@@ -317,15 +317,15 @@
                     <img src="assets/images/possibility1.webp" alt="img" width="" heigth="" loading="lazy">
                  </picture>
                 </div>
-              </div>
-              <div class="possibility__column">
+              </a>
+              <a href="https://nexa.ru/sign-up" target="_blank" class="possibility__column">
                 <div class="possibility__content">
                   <h3 class="possibility__subtitle"><img src="assets/images/icon/wave.png" alt="img" width="" heigth="" loading="lazy"> Оживление природы</h3>
                   <p class="possibility__text">Плавное движение воды, парение облаков. Превращает <span style="font-weight: 600;">статичные пейзажи в живые сцены</span></p>
                 </div>
-                <a href="#" class="possibility__button">
+                <div class="possibility__button">
                   <img src="assets/images/icon/arrow.png" alt="img" width="" heigth="" loading="lazy">
-                </a>
+                </div>
                 <div class="possibility__image">
                   <picture>
                      <source
@@ -336,15 +336,15 @@
                     <img src="assets/images/possibility2.webp" alt="img" width="" heigth="" loading="lazy">
                  </picture>
                 </div>
-              </div>
-              <div class="possibility__column">
+              </a>
+              <a href="https://nexa.ru/sign-up" target="_blank" class="possibility__column">
                 <div class="possibility__content">
                   <h3 class="possibility__subtitle"><img src="assets/images/icon/photo2.png" alt="img" width="" heigth="" loading="lazy"> Работа с архивными фото</h3>
                   <p class="possibility__text">Эффективное оживление старых и черно-белых снимков <span style="font-weight: 600;">с сохранением атмосферы</span style="font-weight: 600;"></p>
                 </div>
-                <a href="#" class="possibility__button">
+                <div class="possibility__button">
                   <img src="assets/images/icon/arrow.png" alt="img" width="" heigth="" loading="lazy">
-                </a>
+                </div>
                 <div class="possibility__image">
                   <picture>
                      <source
@@ -355,15 +355,15 @@
                     <img src="assets/images/possibility3.webp" alt="img" width="" heigth="" loading="lazy">
                  </picture>
                 </div>
-              </div>
-              <div class="possibility__column">
+              </a>
+              <a href="https://nexa.ru/sign-up" target="_blank" class="possibility__column">
                 <div class="possibility__content">
                   <h3 class="possibility__subtitle"><img src="assets/images/icon/star.png" alt="img" width="" heigth="" loading="lazy"> Динамические эффекты</h3>
                   <p class="possibility__text">Добавление лёгкого движения волос, одежды, аксессуаров <span style="font-weight: 600;">для большей реалистичности</span></p>
                 </div>
-                <a href="#" class="possibility__button">
+                <div class="possibility__button">
                   <img src="assets/images/icon/arrow.png" alt="img" width="" heigth="" loading="lazy">
-                </a>
+                </div>
                 <div class="possibility__image">
                   <picture>
                      <source
@@ -374,9 +374,9 @@
                     <img src="assets/images/possibility4.webp" alt="img" width="" heigth="" loading="lazy">
                  </picture>
                 </div>
-              </div>
+              </a>
             </div>
-            <a class="black-btn hero-btn">
+            <a href="https://nexa.ru/sign-up" target="_blank" class="black-btn hero-btn">
               <span class="black-btn-bg G-center">
                 <i class="icon icon-stars"></i>
               </span>
@@ -390,7 +390,7 @@
             <div class="section-titles fade-top G-column-center">
                 <span class="section-tag">Процесс работы</span>
                 <h2>
-                  Оживите фото <span>за 3 простых шага</span>
+                  Оживите фото <span class="title-color">за 3 простых шага</span>
                 </h2>
                 <p>Весь процесс занимает <span style="font-weight: 600;">меньше минуты</span></p>
             </div>
@@ -453,7 +453,7 @@
                       <p class="work__text">Получите MP4-файл <span style="font-weight: 600;">с плавной анимацией в высоком качестве</span> длительностью 3–5 секунд</p>
                     </div>
                   </div>
-                  <a href="#" class="work__animate">
+                  <a href="https://nexa.ru/sign-up" target="_blank" class="work__animate">
                     <div class="work__round">
                       <img src="assets/images/roundBorderImg.webp" alt="img" width="" heigth="" loading="lazy">
                     </div>
@@ -476,7 +476,7 @@
                 </div>
               </div>
             </div>
-            <a class="black-btn hero-btn work__button">
+            <a href="https://nexa.ru/sign-up" target="_blank" class="black-btn hero-btn work__button">
               <span class="black-btn-bg G-center">
                 <i class="icon icon-stars"></i>
               </span>
@@ -494,7 +494,7 @@
               <div class="inspire__content">
                 <h2><span>Вдохните жизнь</span> <br> в ваши фотографии!</h2>
                 <p>Просто загрузите фото — и наблюдайте, <span style="font-weight: 600;">как оживают ваши любимые моменты</span></p>
-                <a class="black-btn hero-btn">
+                <a href="https://nexa.ru/sign-up" target="_blank" class="black-btn hero-btn">
                   <span class="black-btn-bg G-center">
                     <i class="icon icon-stars"></i>
                   </span>
@@ -911,7 +911,7 @@
                 <img src="assets/images/inspireGrid.webp" alt="img" width="" heigth="" loading="lazy">
               </div>
               <div class="inspire__content">
-                <h2><span>Вдохните жизнь</span> <br> в ваши фотографии!</h2>
+                <h2><span class="title-color">Вдохните жизнь</span> <br> в ваши фотографии!</h2>
                 <p>Просто загрузите фото — и наблюдайте, <span style="font-weight: 600;">как оживают ваши любимые моменты</span></p>
                 <a class="black-btn hero-btn">
                   <span class="black-btn-bg G-center">
@@ -951,8 +951,8 @@
               <div class="section-titles fade-top G-column-center">
                 <span class="section-tag">FAQ</span>
                 <h2>
-                  Все, что нужно
-                  <span class="mobile-text-wrap">знать о Nexa AI</span>
+                  Все, что нужно знать
+                  <span class="mobile-text-wrap"> о Nexa AI</span>
                 </h2>
               </div>
 
@@ -1076,7 +1076,7 @@
                   />
                 </picture>
               </div>
-              <a href="#" class="white-btn footer-btn">
+              <a href="https://nexa.ru/sign-up" target="_blank" class="white-btn footer-btn">
                 <span class="white-btn-bg G-center">
                   <i class="icon icon-stars"></i>
                 </span>
